Cleaned up auth process, getting user info, logout
Still need to store userinfo between sessions

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">amiv</string>
+    <string name="app_name">AMIV</string>
     <string name="title_home">Home</string>
     <string name="title_articles">blitz</string>
     <string name="title_events">Events</string>
