Improved event detail activity

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,6 +5,16 @@
     <string name="title_events">Events</string>
     <string name="title_activity_settings">Settings</string>
 
+    <string name="pref_title_lang">Preffered Language</string>
+    <string-array name="pref_lang_list_values">
+        <item>Deutsch</item>
+        <item>English</item>
+    </string-array>
+    <string-array name="pref_lang_list_entries">
+        <item>0</item>
+        <item>1</item>
+    </string-array>
+
     <!-- Example General settings -->
     <string name="pref_header_general">General</string>
 
@@ -16,17 +26,6 @@
     <string name="pref_title_display_name">Display name</string>
     <string name="pref_default_display_name">John Smith</string>
 
-    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
-    <string-array name="pref_example_list_titles">
-        <item>Always</item>
-        <item>When possible</item>
-        <item>Never</item>
-    </string-array>
-    <string-array name="pref_example_list_values">
-        <item>1</item>
-        <item>0</item>
-        <item>-1</item>
-    </string-array>
 
     <!-- Example settings for Data & Sync -->
     <string name="pref_header_data_sync">Data &amp; sync</string>
