--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,7 +2,7 @@
     <string name="app_name">AMIV</string>
     <string name="title_home">Home</string>
     <string name="title_articles">blitz</string>
-    <string name="title_events">Events</string>
+    <string name="title_notifications">Notifications</string>
     <string name="title_activity_settings">Settings</string>
 
     <string name="pref_title_lang">Preffered Language</string>
