--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,7 +5,7 @@
     <string name="title_notifications">Notifications</string>
     <string name="title_activity_settings">Settings</string>
 
-    <string name="pref_title_lang">Preffered Language</string>
+    <string name="pref_title_lang">Preferred Language</string>
     <string-array name="pref_lang_list_values">
         <item>Deutsch</item>
         <item>English</item>
