--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -32,6 +32,7 @@
     <string name="login_title">Login</string>
     <string name="login_prompt">Please enter your login details</string>
     <string name="not_logged_in">Not Logged In</string>
+    <string name="not_authorised">Not Authorised</string>
     <string name="invalid_login">Invalid Login Details</string>
     <string name="logout_title">Log out</string>
 
@@ -123,8 +124,6 @@
     <string name="sort_name">By Name</string>
     <string name="sort_status">By Status</string>
     <string name="sort_legi">By Legi</string>
-
-
 
 
     <!-- Settings, some are still from template -->
