--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,16 +5,23 @@
     <string name="app_name_checkin">AMIV Check-in</string>
     <string name="title_home">Home</string>
     <string name="title_blitz">blitz</string>
+    <string name="title_jobs">Job Offers</string>
     <string name="title_notifications">Notifications</string>
     <string name="settings_title">Settings</string>
     <string name="apps_title">Apps</string>
     <string name="check_in_title">Check-in</string>
     <string name="barcode_id_title">Barcode ID</string>
     <string name="info_title">Info</string>
+
     <string name="all_events_title">New Events</string>
     <string name="closed_events_title">Closed Events</string>
     <string name="past_events_title">Past Events</string>
     <string name="hidden_events_title">Hidden Events</string>
+
+
+    <string name="all_jobs_title">New Jobs</string>
+    <string name="past_jobs_title">Past Jobs</string>
+    <string name="hidden_jobs_title">Hidden Jobs</string>
 
     <!-- Language -->
     <string name="pref_lang_title">Language - Sprache</string>
@@ -63,6 +70,10 @@
     <string name="no_internet">No Internet</string>
     <string name="requires_internet">Requires Internet</string>
     <string name="snack_fill_all_fields">Please fill in all fields</string>
+
+    <!-- Jobs -->
+    <string name="no_pdf_found">No PDF found</string>
+    <string name="open_pdf">Open PDF</string>
 
     <!-- Errors -->
     <string name="error_image_load">Error loading image</string>
@@ -166,6 +177,7 @@
     </string-array>
 
     <string name="pref_title_system_sync_settings">System sync settings</string>
+    <string name="date_created">Added</string>
 
     <!-- Unsorted/Translated Strings-->
 
