--- a/app/src/main/res/values-de/strings.xml
+++ b/app/src/main/res/values-de/strings.xml
@@ -68,7 +68,7 @@
 
     <string name="no_internet">Kein Internet</string>
     <string name="requires_internet">Benötigt Internet</string>
-    <string name="snack_fill_all_fields">Bitte füllen sie alle Felder ein</string>
+    <string name="snack_fill_fields">Bitte füllen sie Felder ein</string>
 
     <!-- Jobs -->
     <string name="no_pdf_found">Kein PDF Gefunden</string>
