--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -69,7 +69,7 @@
 
     <string name="no_internet">No Internet</string>
     <string name="requires_internet">Requires Internet</string>
-    <string name="snack_fill_all_fields">Please fill in all fields</string>
+    <string name="snack_fill_fields">Please fill in fields</string>
 
     <!-- Jobs -->
     <string name="no_pdf_found">No PDF found</string>
