--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -35,6 +35,15 @@
         <item>de</item>
     </string-array>
 
+    <!-- Intro -->
+    <string name="select_language_universal">Select Your Language\nWähle Deine Sprache</string>
+    <string name="intro_header_app_uses">Use the amiv app to:</string>
+    <string name="intro_info_events">Sign up to Events</string>
+    <string name="intro_info_jobs">View Job Offers</string>
+    <string name="intro_info_microapps">Use amiv Microapps</string>
+    <string name="intro_info_barcode_id">Barcode ID</string>
+    <string name="intro_info_helper_apps">More amiv Helper apps</string>
+
     <!-- Login -->
     <string name="login_title">Login</string>
     <string name="login_prompt">Please enter your login details</string>
@@ -185,6 +194,9 @@
     <string name="see_notification">See Notification&#8230;</string>
     <string name="email_only_login">Email only login</string>
     <string name="requires_login">Requires Login</string>
+    <string name="next">Next</string>
+    <string name="skip">Skip</string>
+    <string name="lets_go">Let\'s Go</string>
 
 
 </resources>
