Toolbar improvements, Centralisation of settings for checkin, log into last event
Manifest cleanup, activity navigation improvements.
Checkin settings are now stored using core.Settings
More Util functions, for toolbar and whether window adjusts to keyboard
Checkin login cleanup, looks more alike to the core login activity
Can now just open most recent event for easier login 
Full german support in checkin app, excl. strings from the server
Checkin: font size decreases for long responses from server
Checkin press enter during scanActivity in legi text field to submit
Logo is now centered in toolbar :)

--- a/app/src/main/res/values-de/strings.xml
+++ b/app/src/main/res/values-de/strings.xml
@@ -128,14 +128,18 @@
     <string name="invalid_pin">Falscher PIN</string>
     <string name="invalid_url">Falscher URL</string>
     <string name="open_website">Webseite Öffnen</string>
+    <string name="press_again_logout">Nochmal für Logout</string>
 
     <string name="seconds">Sekunden</string>
-    <string name="refresh_frequency_title">Aktualisierungshäufigkeit</string>
-    <string name="auto_refresh_title">Auto Aktuaisierung</string>
+    <string name="refresh_rate_title">Aktualisierungshäufigkeit (s)</string>
+    <string name="auto_refresh_title">Auto Aktualisierung</string>
     <string name="save">Speichern</string>
     <string name="valid">Valid</string>
     <string name="search">Suchen</string>
 
+    <string name="stat_title">Statistiken</string>
+    <string name="people_title">Personen</string>
+    <string name="event_info_title">Event Infos</string>
     <string name="sort_membership">Nach Mitgliedschaft</string>
     <string name="sort_name">Nach Name</string>
     <string name="sort_status">Nach Status</string>
