--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -140,15 +140,19 @@
     <string name="invalid_pin">Invalid PIN</string>
     <string name="invalid_url">Invalid URL</string>
     <string name="checkin_server_url" translatable="false">https://checkin.amiv.ethz.ch</string>
-
     <string name="open_website">Open Website</string>
+    <string name="press_again_logout">Press Again To Logout</string>
+
     <string name="seconds">Seconds</string>
-    <string name="refresh_frequency_title">Refresh Frequency</string>
+    <string name="refresh_rate_title">Refresh Rate (s)</string>
     <string name="auto_refresh_title">Auto Refresh</string>
     <string name="save">Save</string>
     <string name="valid">Valid</string>
     <string name="search">Search</string>
 
+    <string name="stat_title">Stats</string>
+    <string name="people_title">People</string>
+    <string name="event_info_title">Event Info</string>
     <string name="sort_membership">By Membership</string>
     <string name="sort_name">By Name</string>
     <string name="sort_status">By Status</string>
