--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -96,14 +96,15 @@
 
     <!-- Settings -->
     <string name="pref_food_title">Food Preference</string>
+    <string name="pref_special_food_title">Special Food Requirements</string>
     <string name="pref_food_key">food</string>
     <string-array name="pref_food_list_values">
-        <item>Everything</item>
-        <item>Vegetarian</item>
-        <item>Nothing</item>
+        <item>Omnivor</item>
+        <item>Vegi</item>
+        <item>Vegan</item>
         <item>Other</item>
     </string-array>
-    <string-array name="pref_food_list_entries">
+    <string-array name="pref_food_list_entries" translatable="false">
         <item>all</item>
         <item>veg</item>
         <item>nothing</item>
@@ -120,9 +121,9 @@
     </string-array>
     <string-array name="pref_sbb_list_entries">
         <item>GA</item>
-        <item>G7</item>
-        <item>HT</item>
-        <item>NA</item>
+        <item>Gleis 7</item>
+        <item>Halbtax</item>
+        <item>None</item>
     </string-array>
 
     <string name="pref_notifications_title">Receive Notifications</string>
