Extended notifications with jobs, fix alarm issues when app  is killed
Fetch Job changes and notification generation, alarm service start is moved into intro to fix issue when app is killed, reboot permissions added but issue is still there

--- a/app/src/main/res/values-de/strings.xml
+++ b/app/src/main/res/values-de/strings.xml
@@ -191,5 +191,10 @@
     <string name="other">Anderes</string>
     <string name="tap_to_set">Setzen</string>
 
+    <string name="new_jobs_notification">Neue Stellenangebote</string>
+    <string name="multipleEventsadded">Neue Events</string>
+    <string name="singleEventadded">Neues Event</string>
+    <string name="new_job_notification">Neues Stellenangebot</string>
+
 
 </resources>
